--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1496,3 +1496,10 @@ section {
 .swiper-pagination-bullet-active {
   background-color: #4070f4;
 }
+.card .swiper-slide .swiper-slide-duplicate .swiper-slide-duplicate-active {
+  margin-right: -40px;
+}
+/* portfolio */
+.portfolio img {
+  width: 100%;
+}
