--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -410,8 +410,7 @@ h6 {
 .hero_description {
   font-size: 18px;
 }
-
-@media (max-width: 1440px) {
+@media only screen and (max-width: 1440px) {
   .hero_logo {
     width: 450x;
   }
