--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -410,11 +410,6 @@ h6 {
 .hero_description {
   font-size: 18px;
 }
-@media only screen and (max-width: 1440px) {
-  .hero_logo {
-    width: 450x;
-  }
-}
 
 @media (max-width: 991px) {
   #hero {
@@ -1048,6 +1043,13 @@ section {
   text-align: center;
   padding-bottom: 3%;
 }
+
+@media only screen and (max-width: 1440px) {
+  .hero_logo {
+    width: 450x !important;
+  }
+}
+
 @media (max-width: 991px) {
   #header {
     padding: 12px 0;
