--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1035,8 +1035,13 @@ section {
 
 @media only screen and (max-width: 1440px) {
   .hero-img img {
-    width: 420px;
+    width: 450px;
     margin: 0px 30%;
+  }
+}
+@media only screen and (max-width: 1366px) {
+  .hero-img img {
+    width: 420px;
   }
 }
 
