--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1045,6 +1045,15 @@ section {
   }
 }
 
+@media only screen and (max-width: 1024x) {
+  .hero-img img {
+    width: 325px;
+  }
+  #hero h2 {
+    font-size: 25px;
+  }
+}
+
 @media (max-width: 991px) {
   #header {
     padding: 12px 0;
