--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1043,9 +1043,14 @@ section {
   .hero-img img {
     width: 420px;
   }
+  #hero h2 {
+    margin: 10px 0 30px 0;
+    font-size: 22px;
+    font-weight: 600;
+  }
 }
 
-@media only screen and (max-width: 1024x) {
+@media only screen and (max-width: 1024px) {
   .hero-img img {
     width: 325px;
   }
