--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -355,8 +355,9 @@ h6 {
 }
 
 #hero h2 {
-  margin: 10px 0 30px 0;
-  font-size: 30px;
+  margin: 10px 0px 30px;
+  font-size: 26px;
+  font-weight: 600;
 }
 
 #hero .btn-get-started {
