--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -411,6 +411,9 @@ h6 {
 .hero_description {
   font-size: 18px;
 }
+#hero .animated {
+  animation: up-down 2s ease-in-out infinite alternate-reverse both;
+}
 
 @media (max-width: 991px) {
   #hero {
