--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1043,15 +1043,22 @@ section {
   text-align: center;
 }
 
+@media only screen and (max-width: 1600px) {
+  .hero-img img {
+    width: 400px;
+    margin: 0px 30%;
+  }
+}
+
 @media only screen and (max-width: 1440px) {
   .hero-img img {
-    width: 450px;
+    width: 400px;
     margin: 0px 30%;
   }
 }
 @media only screen and (max-width: 1366px) {
   .hero-img img {
-    width: 420px;
+    width: 350px;
   }
   #hero h2 {
     margin: 10px 0 30px 0;
