--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1094,3 +1094,9 @@ section {
     padding: 7% 0 4% 0;
   }
 }
+@media only screen and (max-width: 575px) {
+  .hero-img img {
+    width: 400px;
+    margin: 0 !important;
+  }
+}
