--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -480,7 +480,21 @@ h6 {
 .roadmap {
   padding: 0% 0px 5% 0 !important;
 }
+/* about us */
+#about_us {
+  width: 100%;
+  height: 80vh;
+  background: #fff;
+}
 
+.about_us img {
+  width: 100%;
+}
+.title {
+  font-size: 40px;
+  text-align: center;
+  font-weight: 600;
+}
 /*--------------------------------------------------------------
 # Sections General
 --------------------------------------------------------------*/
