--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -481,7 +481,18 @@ h6 {
   padding: 0% 0px 5% 0 !important;
 }
 /* about us */
-#about_us {
+
+.description p {
+  font-size: 18px;
+  text-align: justify;
+}
+.about_title {
+  font-size: 40px;
+  font-weight: 700;
+  text-align: center;
+}
+
+/* #about_us {
   width: 100%;
   height: 100%;
   background: #fff;
@@ -494,7 +505,7 @@ h6 {
   font-size: 40px;
   text-align: center;
   font-weight: 600;
-}
+} */
 /*--------------------------------------------------------------
 # Sections General
 --------------------------------------------------------------*/
@@ -1095,6 +1106,10 @@ section {
 }
 
 @media (max-width: 991px) {
+  .about_us_contents {
+    display: flex;
+    flex-direction: column-reverse;
+  }
   #header {
     padding: 12px 0;
   }
