--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -506,6 +506,22 @@ h6 {
   text-align: center;
   font-weight: 600;
 } */
+
+/* logo links */
+
+.logo_links > h1 {
+  font-size: 32px;
+  margin: 0;
+  padding: 0;
+  line-height: 1;
+  font-weight: 700;
+  letter-spacing: 0.5px;
+  text-align: center;
+}
+
+.logo_links img {
+  max-width: 60px;
+}
 /*--------------------------------------------------------------
 # Sections General
 --------------------------------------------------------------*/
