--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1141,6 +1141,9 @@ section {
   }
 }
 @media only screen and (max-width: 575px) {
+  .how_it_works {
+    padding: 10% 0px 5% 0;
+  }
   .hero-img img {
     width: 300px;
     margin: 0 !important;
