--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1017,8 +1017,8 @@ section {
 }
 .card-image {
   position: relative;
-  height: 300px;
-  width: 280px;
+  height: 100%;
+  width: 100%;
   border-radius: 50%;
   background: #fff;
   padding: 3px;
@@ -1095,6 +1095,7 @@ section {
   text-align: center;
 }
 
+/* media quaries */
 @media only screen and (max-width: 1600px) {
   .hero-img img {
     width: 400px;
