--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1137,11 +1137,6 @@ section {
 }
 
 @media (max-width: 991px) {
-  .about_us_contents {
-    display: flex;
-    flex-direction: column-reverse;
-    gap: 20px;
-  }
   #header {
     padding: 12px 0;
   }
@@ -1153,6 +1148,11 @@ section {
   }
   .row.counters {
     padding: 7% 0 4% 0;
+  }
+  .main-img img {
+    height: 215px !important;
+    width: 300px !important;
+    overflow: hidden;
   }
 }
 @media only screen and (max-width: 575px) {
@@ -1167,5 +1167,10 @@ section {
     height: 200px !important;
     width: 350px !important;
     overflow: hidden;
+  }
+  .about_us_contents {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 20px;
   }
 }
