--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -501,6 +501,9 @@ section#about_us {
   font-weight: 600;
   color: #13ba4d;
 }
+section#contact {
+  padding: 5% 0;
+}
 /* #about_us {
   width: 100%;
   height: 100%;
