--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -475,7 +475,7 @@ h6 {
 /* portfolio */
 .portfolio,
 .how_it_works {
-  padding: 5% 0px;
+  padding: 7% 0px 5% 0;
 }
 .roadmap {
   padding: 0% 0px 5% 0 !important;
